--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Ujval Gupta</h1>
-    <img src="./Assets/img1.jpeg" height="200">
+    <img src="./Assets/hey.jpeg" height="200">
     <h2>Summary</h2>
     <p>An engineering student with the ability to ideate, execute and improvise projects as a part of a team. Passionate about corrective feedback loops and solving any problem in the most efficient manner.</p>
     <hr />
